Set line height to avoid a significant spacing difference across themes.

--- a/css/revview-front.css
+++ b/css/revview-front.css
@@ -151,6 +151,7 @@ body.revview-ui {
 	margin: 10px 0 5px;
 	padding: 0;
 	font-size: 14px;
+	line-height: 14px;
 }
 .revview-revision-list .revview-tooltip-left {
 	margin-left: -10px;
